--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "repository": "https://github.com/gingermusketeer/heroku-site-directory-buildpack",
   "license": "MIT",
   "dependencies": {
-    "http-server": "^0.12.3"
+    "serve": "^11.3.0"
   },
   "scripts": {
-    "start": "./node_modules/.bin/http-server $DIRECTORY"
+    "start": "./node_modules/.bin/serve $DIRECTORY"
   }
 }
